log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-log
          emptyDir: {}
      containers:
        - name: log-output-logger
          image: un1k0rn86/log-output-logger:1.10
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files
        - name: log-output-reader
          image: un1k0rn86/log-output-reader:1.10.1
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files
